set(ENGINE_SOURCES
        editor/EditorPanel.cpp
        editor/EditorPanel.h
        engine/EngineContext.cpp
        engine/EngineContext.h
        common/VulkanUtils.cpp
        common/VulkanUtils.h
        core/VulkanContext.cpp
        core/VulkanContext.h
        core/WindowService.cpp
        core/WindowService.h
        core/ImGuiService.cpp
        core/ImGuiService.h
        editor/dock-spaces/viewport/ViewportPanel.cpp
        editor/dock-spaces/viewport/ViewportPanel.h
        editor/dock-spaces/viewport/EngineFramePanel.cpp
        editor/dock-spaces/viewport/EngineFramePanel.h
        editor/dock-spaces/docks/AbstractDockPanel.h
        ApplicationContext.cpp
        ApplicationContext.h
        editor/abstract/AbstractPanel.h
        editor/abstract/AbstractPanel.cpp
        common/ISync.h
        engine/service/CameraService.cpp
        engine/service/CameraService.h
        engine/dto/Camera.h
        editor/util/Util.h
        common/Inspectable.h
        common/Inspectable.cpp
        common/InspectedField.h
        editor/dock-spaces/inspector/InspectorPanel.cpp
        editor/dock-spaces/inspector/InspectorPanel.h
        editor/abstract/form/FormPanel.cpp
        editor/abstract/form/FormPanel.h
        editor/abstract/form/AccordionPanel.cpp
        editor/abstract/form/AccordionPanel.h
        common/FieldType.h
        common/InspectableMember.h
        editor/abstract/form/types/BooleanField.cpp
        editor/abstract/form/types/BooleanField.h
        editor/abstract/form/types/IntField.cpp
        editor/abstract/form/types/IntField.h
        editor/abstract/form/types/FloatField.cpp
        editor/abstract/form/types/FloatField.h
        editor/abstract/form/types/MethodField.cpp
        editor/abstract/form/types/MethodField.h
        editor/util/UIUtil.h
        editor/util/UIUtil.cpp
        editor/dock-spaces/header/EditorHeaderPanel.cpp
        editor/dock-spaces/header/EditorHeaderPanel.h
        editor/dock-spaces/header/AsyncTaskPanel.cpp
        editor/dock-spaces/header/AsyncTaskPanel.h
        editor/dock-spaces/footer/EditorFooterPanel.cpp
        editor/dock-spaces/footer/EditorFooterPanel.h
        common/Icons.h
        editor/service/DockService.cpp
        editor/service/DockService.h
        editor/dto/DockDTO.h
        editor/dto/DockSpace.h
        editor/dock-spaces/docks/DockSpacePanel.cpp
        editor/dock-spaces/docks/DockSpacePanel.h
        editor/dto/DockSpace.cpp
        editor/service/ThemeService.cpp
        editor/service/ThemeService.h
        editor/repository/EditorRepository.h
        editor/repository/DockRepository.h
        editor/enum/engine-definitions.h
        editor/dock-spaces/files/FilesPanel.cpp
        editor/dock-spaces/files/FilesPanel.h
        editor/dock-spaces/files/ListDirectoryPanel.cpp
        editor/dock-spaces/files/ListDirectoryPanel.h
        editor/dock-spaces/files/CardDirectoryPanel.cpp
        editor/dock-spaces/files/CardDirectoryPanel.h
        editor/dock-spaces/files/AbstractDirectoryPanel.h
        editor/dock-spaces/files/NavigationPanel.cpp
        editor/dock-spaces/files/NavigationPanel.h
        editor/dock-spaces/files/BookmarksPanel.cpp
        editor/dock-spaces/files/BookmarksPanel.h
        editor/dock-spaces/files/SystemDirPanel.cpp
        editor/dock-spaces/files/SystemDirPanel.h
        editor/dock-spaces/console/ConsolePanel.cpp
        editor/dock-spaces/console/ConsolePanel.h
        editor/dock-spaces/metrics/MetricsPanel.cpp
        editor/dock-spaces/metrics/MetricsPanel.h
        common/LoggerUtil.cpp
        common/LoggerUtil.h
        editor/dock-spaces/world/WorldPanel.cpp
        editor/dock-spaces/world/WorldPanel.h
        editor/dock-spaces/lua-editor/LuaEditorPanel.cpp
        editor/dock-spaces/lua-editor/LuaEditorPanel.h
        engine/resource/RuntimeResource.h
        engine/service/ShaderService.cpp
        engine/service/ShaderService.h
        engine/dto/ShaderModule.cpp
        engine/dto/ShaderModule.h
        engine/passes/AbstractRenderPass.cpp
        engine/passes/AbstractRenderPass.h
        common/AbstractResourceService.h
        engine/resource/FrameBufferAttachment.h
        engine/service/FrameBufferService.cpp
        engine/service/FrameBufferService.h
        engine/resource/FrameBufferInstance.h
        engine/service/PipelineService.cpp
        engine/service/PipelineService.h
        engine/resource/PipelineInstance.h
        engine/service/BufferService.cpp
        engine/service/BufferService.h
        engine/service/DescriptorSetService.cpp
        engine/service/DescriptorSetService.h
        engine/dto/DescriptorInstance.h
        engine/dto/GlobalDataUBO.h
        engine/repository/RuntimeRepository.h
        engine/resource/BufferInstance.cpp
        engine/resource/BufferInstance.h
        engine/service/MeshService.cpp
        engine/service/MeshService.h
        engine/dto/MeshData.h
        engine/resource/MeshInstance.h
        common/FilesUtil.h
        common/FileExtensions.h
        common/FilesUtil.cpp
        editor/dto/FSEntry.h
        editor/dock-spaces/files/FilesContext.h
        common/FileDialogUtil.h
        editor/dock-spaces/files/FilesHeaderPanel.cpp
        editor/dock-spaces/files/FilesHeaderPanel.h
        editor/service/MaterialImporterService.cpp
        editor/service/MaterialImporterService.h
        editor/service/MeshImporterService.cpp
        editor/service/MeshImporterService.h
        editor/service/SceneImporterService.cpp
        editor/service/SceneImporterService.h
        common/AbstractImporter.h
        editor/service/TextureImporterService.cpp
        editor/service/TextureImporterService.h
        engine/dto/TextureData.h
        engine/service/TextureService.cpp
        engine/service/TextureService.h
        editor/service/FilesService.cpp
        editor/service/FilesService.h
        editor/service/FileImporterService.cpp
        editor/service/FileImporterService.h
        editor/dock-spaces/files/FilesContext.cpp
        engine/dto/VertexData.h
        editor/passes/GridPass.cpp
        editor/passes/GridPass.h
        engine/passes/CommandBufferRecorder.cpp
        engine/passes/CommandBufferRecorder.h
        engine/dto/Camera.cpp
        engine/repository/WorldRepository.cpp
        engine/repository/WorldRepository.h
        engine/dto/MetadataComponent.h
        engine/enum/ComponentType.cpp
        engine/enum/ComponentType.h
        engine/dto/AbstractComponent.h
        engine/dto/PrimitiveComponent.h
        engine/dto/TransformComponent.h
        editor/enum/ShadingMode.h
        editor/dock-spaces/world/WorldHeaderPanel.cpp
        editor/dock-spaces/world/WorldHeaderPanel.h
        editor/service/SelectionService.cpp
        editor/service/SelectionService.h
        engine/dto/MetadataComponent.cpp
        engine/dto/TransformComponent.cpp
        engine/dto/PrimitiveComponent.cpp
        editor/abstract/form/types/ResourceField.cpp
        editor/abstract/form/types/ResourceField.h
        editor/abstract/form/types/ColorField.cpp
        editor/abstract/form/types/ColorField.h
        editor/abstract/form/types/Vec4Field.cpp
        editor/abstract/form/types/Vec4Field.h
        editor/abstract/form/types/Vec3Field.cpp
        editor/abstract/form/types/Vec3Field.h
        editor/abstract/form/types/Vec2Field.cpp
        editor/abstract/form/types/Vec2Field.h
        editor/abstract/form/types/StringField.cpp
        editor/abstract/form/types/StringField.h
        editor/abstract/form/types/ResourceFilesPanel.h
        editor/abstract/form/types/ResourceFilesPanel.cpp
        engine/service/StreamingService.cpp
        engine/service/StreamingService.h
        engine/enum/ResourceType.h
        editor/dock-spaces/viewport/GizmoPanel.cpp
        editor/dock-spaces/viewport/GizmoPanel.h
        editor/dock-spaces/viewport/GizmoTransformStrategy.cpp
        editor/dock-spaces/viewport/GizmoTransformStrategy.h
        editor/dock-spaces/viewport/ViewportHeaderPanel.cpp
        editor/dock-spaces/viewport/ViewportHeaderPanel.h
        editor/dock-spaces/viewport/GizmoSettingsPanel.cpp
        editor/dock-spaces/viewport/GizmoSettingsPanel.h
        editor/abstract/form/types/QuatField.cpp
        editor/abstract/form/types/QuatField.h
        engine/service/TransformService.cpp
        engine/service/TransformService.h
        engine/dto/BoundingBox.h
        editor/dto/SparseVoxelOctreeBuilder.cpp
        editor/dto/SparseVoxelOctreeBuilder.h
        editor/dto/OctreeNode.cpp
        editor/dto/OctreeNode.h
        engine/dto/VoxelData.h
        editor/dto/SceneData.h
        engine/passes/impl/PostProcessingPass.cpp
        engine/passes/impl/PostProcessingPass.h
        engine/passes/impl/HWRayTracingPass.cpp
        engine/passes/impl/HWRayTracingPass.h
        engine/service/RayTracingService.cpp
        engine/service/RayTracingService.h
        engine/dto/PipelineBuilder.h
        engine/resource/FrameBufferAttachment.cpp
        engine/repository/EngineRepository.cpp
        engine/repository/EngineRepository.h
        common/serialization-definitions.h
        editor/service/NotificationService.cpp
        editor/service/NotificationService.h
        editor/service/AsyncTaskService.cpp
        editor/service/AsyncTaskService.h
        editor/dto/Notification.h
        editor/enum/NotificationSeverity.h
        engine/dto/SparseVoxelOctreeData.h
        editor/passes/SelectionOutlinePass.cpp
        editor/passes/SelectionOutlinePass.h
        editor/service/PickingService.cpp
        editor/service/PickingService.h
        engine/resource/SVOInstance.h
        engine/dto/LightData.h
        editor/passes/SelectionIDPass.cpp
        editor/passes/SelectionIDPass.h
        editor/passes/FallbackPass.cpp
        editor/passes/FallbackPass.h
        editor/repository/EditorRepository.cpp
        editor/dto/GridPushConstant.h
        engine/passes/AbstractComputePass.cpp
        engine/passes/AbstractComputePass.h
        engine/passes/AbstractPass.cpp
        engine/passes/AbstractPass.h
        engine/util/ImageUtils.h
        engine/service/MaterialService.cpp
        engine/service/MaterialService.h
        engine/service/LightService.cpp
        engine/service/LightService.h
        engine/dto/VolumeComponent.cpp
        engine/dto/VolumeComponent.h
        engine/dto/DescriptorBinding.h
        editor/dto/AsyncTask.h
        editor/service/VoxelImporterService.cpp
        editor/service/VoxelImporterService.h
        engine/dto/VolumeData.h
        engine/service/VoxelService.cpp
        engine/service/VoxelService.h
        common/ISerialize.cpp
        editor/dto/SceneImportSettingsDTO.h
        editor/panel/NotificationsPanel.cpp
        editor/panel/NotificationsPanel.h
        engine/frame-builder/EngineFrameBuilder.cpp
        engine/frame-builder/EngineFrameBuilder.h
        engine/frame-builder/EngineFrame.cpp
        engine/frame-builder/EngineFrame.h
        engine/frame-builder/structures/FramebufferBuilder.cpp
        engine/frame-builder/structures/FramebufferBuilder.h
        engine/frame-builder/structures/TextureBuilder.cpp
        engine/frame-builder/structures/TextureBuilder.h
        engine/frame-builder/structures/BufferBuilder.cpp
        engine/frame-builder/structures/BufferBuilder.h
        engine/frame-builder/structures/ResourceBuilder.h
        engine/dto/PipelineBuilder.cpp
        engine/service/DescriptorSetService.cpp
        engine/frame-builder/structures/CommandBufferRecorderBuilder.cpp
        engine/passes/impl/TemporalAccumulationPass.cpp
        engine/passes/impl/TemporalAccumulationPass.h
        engine/passes/impl/SpatialFilterPass.cpp
        engine/passes/impl/SpatialFilterPass.h
        engine/enum/ComponentType.cpp
        editor/dto/SceneEntityData.h
        editor/dock-spaces/repositories/RepositoriesPanel.cpp
        editor/dock-spaces/repositories/RepositoriesPanel.h
        engine/service/VolumeService.cpp
        engine/service/VolumeService.h
        engine/service/LuaService.cpp
        engine/service/LuaService.h
        common/IContextMember.h
        common/IEventMember.h
        common/IEventMember.cpp
        common/IService.h
        common/IRepository.h
        common/IContextMember.cpp
        core/DirectoryService.cpp
        core/DirectoryService.h
        common/IDisposable.h
        core/FrameService.cpp
        core/FrameService.h
        common/Icons.cpp
        editor/service/HistoryService.cpp
        ApplicationEventContext.cpp
        ApplicationEventContext.h
        engine/dto/LightComponent.cpp
        engine/dto/LightComponent.h
        common/Util.h
        common/Util.cpp
        editor/dto/FieldModificationEvent.h
        editor/dto/InspectableEventPayload.h
        engine/dto/BoxColliderComponent.cpp
        engine/dto/BoxColliderComponent.h
        engine/dto/CapsuleColliderComponent.cpp
        engine/dto/CapsuleColliderComponent.h
        engine/dto/GlobalScriptComponent.cpp
        engine/dto/GlobalScriptComponent.h
        engine/dto/MeshColliderComponent.cpp
        engine/dto/MeshColliderComponent.h
        engine/dto/RigidBodyComponent.cpp
        engine/dto/RigidBodyComponent.h
        engine/dto/ScopedScriptComponent.cpp
        engine/dto/ScopedScriptComponent.h
        engine/dto/SphereColliderComponent.cpp
        engine/dto/SphereColliderComponent.h
)

# Extract non-main sources for testing
set(ENGINE_LIB_SOURCES ${ENGINE_SOURCES})

add_library(metal_engine_lib STATIC ${ENGINE_LIB_SOURCES})
target_include_directories(metal_engine_lib PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_link_libraries(metal_engine_lib PUBLIC ${COMMON_LIBRARIES})

add_executable(metal_engine main.cpp)
target_link_libraries(metal_engine PRIVATE metal_engine_lib)
if (WIN32)
    target_link_libraries(metal_engine PRIVATE dwmapi)
endif ()
add_dependencies(metal_engine copy_resources)

add_custom_command(TARGET metal_engine POST_BUILD
        COMMAND ${CMAKE_COMMAND} -E copy_directory
        "${CMAKE_BINARY_DIR}/resources"
        "$<TARGET_FILE_DIR:metal_engine>/resources")
